--- a/Coldwarzombies.new/Zombies.csproj
+++ b/Coldwarzombies.new/Zombies.csproj
@@ -5,13 +5,18 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
     <Platforms>AnyCPU;x64</Platforms>
-    <Authors>FeetLovers</Authors>
-    <Company>FeetFetishCo</Company>
-    <Product>FeetPicatureScrapper</Product>
-    <PackageId>Feet</PackageId>
-    <AssemblyName>ColdWarZombieTrainer</AssemblyName>
+    <Authors>Matrix</Authors>
+
+    <Company>MatrixCo</Company>
+
+    <Product>Matrix</Product>
+
+    <PackageId>Matrix</PackageId>
+
+    <AssemblyName>zombies</AssemblyName>
     <Copyright>2020</Copyright>
-    <Description>Peniss</Description>
+    <Description>Matrix</Description>
+
     <NeutralLanguage>am-ET</NeutralLanguage>
     <AssemblyVersion>0.01.0.0</AssemblyVersion>
     <FileVersion>0.1.0.0</FileVersion>
@@ -19,8 +24,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="760_1000.jpg" />
-    <None Remove="PikPng.com_sexy-anime-girl-png_5745364.png" />
+    <None Remove="5745364.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -28,7 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="PikPng.com_sexy-anime-girl-png_5745364.png" />
+    <Resource Include="5745364.png" />
   </ItemGroup>
 
 </Project>
